--- a/windows/AboutThisPC/MainWindow.xaml
+++ b/windows/AboutThisPC/MainWindow.xaml
@@ -9,6 +9,10 @@
     mc:Ignorable="d"
     Title="AboutThisPC">
 
+    <Window.SystemBackdrop>
+        <MicaBackdrop />
+    </Window.SystemBackdrop>
+
     <Grid>
 
     </Grid>
