--- a/windows/AboutThisPC/ClassicPage.xaml
+++ b/windows/AboutThisPC/ClassicPage.xaml
@@ -9,6 +9,53 @@
     mc:Ignorable="d">
 
     <Grid>
-        <StackPanel x:Name="ClassicStackPanel" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="16" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="16" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="12" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="12" />
+        </Grid.RowDefinitions>
+
+        <Image x:Name="ComputerImage" Width="200" Stretch="Uniform" HorizontalAlignment="Center" Grid.Row="0" />
+        <StackPanel Grid.Row="1" x:Name="ClassicStackPanelColumnSpacer1" Grid.Column="1" Orientation="Vertical" />
+        <TextBlock x:Name="ComputerModelMain" Grid.Row="2" FontSize="32" HorizontalAlignment="Center"/>
+        <TextBlock x:Name="ComputerModelSub" Grid.Row="3" FontSize="12" HorizontalAlignment="Center"/>
+        <StackPanel Grid.Row="4" x:Name="ClassicStackPanelColumnSpacer2" Grid.Column="1" Orientation="Vertical" />
+
+        <Grid Grid.Row="5" HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="16" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel x:Name="ClassicStackPanelColumn1" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Right" />
+            <StackPanel x:Name="ClassicStackPanelColumnSpacer3" Grid.Column="1" Orientation="Vertical" />
+            <StackPanel x:Name="ClassicStackPanelColumn2" Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Left" />
+        </Grid>
+
+        <StackPanel Grid.Row="6" x:Name="ClassicStackPanelColumnSpacer4" Grid.Column="1" Orientation="Vertical" />
+
+        <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10">
+            <Button Content="More Info" Padding="8" Click="MoreInfoButtonClick" />
+            <Button Click="EyeButtonClick" x:Name="EyeButton">
+                <Grid Width="24" Height="24">
+                    <FontIcon x:Name="EyeIconGlyph" FontFamily="Segoe MDL2 Assets" Glyph="&#xE7B3;" FontSize="24" />
+                    <Line X1="4" Y1="20" X2="20" Y2="4" Stroke="{ThemeResource SystemControlForegroundBaseHighBrush}" StrokeThickness="2" x:Name="EyeIconLine" />
+                </Grid>
+            </Button>
+        </StackPanel>
+
+
+        <StackPanel Grid.Row="8" x:Name="ClassicStackPanelColumnSpacer5" Grid.Column="1" Orientation="Vertical" />
+        <StackPanel Grid.Row="9" x:Name="ClassicStackPanelBottomText" Orientation="Vertical" />
+        <StackPanel Grid.Row="10" x:Name="ClassicStackPanelColumnSpacer6" Grid.Column="1" Orientation="Vertical" />
     </Grid>
 </Page>
