--- a/windows/AboutThisPC/MainWindow.xaml
+++ b/windows/AboutThisPC/MainWindow.xaml
@@ -13,9 +13,7 @@
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
-    <Grid>
-        <Grid Margin="0,32,0,0">
+        <Grid x:Name="MainWindowGrid">
             <Frame x:Name="MainFrame"/>
         </Grid>
-    </Grid>
 </Window>
