Remove Linux service and make working system tray

--- a/linux/application-icon.qrc
+++ b/linux/application-icon.qrc
@@ -1,3 +1,5 @@
 <RCC>
-    <qresource prefix="/images"/>
+    <qresource prefix="/appicon">
+        <file alias="toolbar">toolbar.png</file>
+    </qresource>
 </RCC>
